# dumpelf

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  build.sh  dump.cc  elf.cc  elf.hh  elf.ini  ini.hh  load.cc  main.hh  meson.build  stdafx.hh
.github/workflows/: build.yml  coverage.yml  test.yml
inc/: formatter.hh  load.hh
src/: formatter.cc  ini.cc  main.cc
